# philosophers

./: .dir-locals.el  .gitignore  CMakeLists.txt  Makefile  README.md  README.org
mutex_tests/: main.c  main3.c  main_test_with_2.c  philo.h  utils.c
philo/: Makefile  argument_checks.c  bak.c.bak  fork_control.c  ft_putchar_fd.c  ft_putnbr_ull_fd.c  ft_putstr_fd.c  helper.c  init_philos.c  init_shared_data.c  init_teardowns.c  initialize.c  main.c  main2.c  observer.c  params.c  philo.c  philo.h  philo_1.c  phylo.py  print_messages.c  teardown.c  teardowns.c  teardowns_1.c  timestamp.c.bak  utils.c  validate.c
philo/tests/scenarios/: test_scenario1.py
philo/tests/sync_test/: sync_test.py
philo/tests/unittests/: test_data_validation.cpp  test_main.cpp  test_main.hpp
philo_bonus/: CMakeLists.txt  Makefile  argument_checks_bonus.c  main_bonus.c  params_bonus.c  philo_bonus.c  philo_bonus.h  philo_bonus_1.c  phylo.py  print_msgs_bonus.c  semaphores.c  semaphores_bonus.c  utils_bonus.c  validate_bonus.c
roam/: 20241108190605-philosophers.org  20241121072643-pthreads.org  20241121073611-pthread_create.org  20241121073633-pthread_self.org  20241121073831-pthread_join.org  20241121073845-pthread_detach.org  20241121074347-pthread_cancel_state.org  20241121074455-thread_safe_functions.org  20241121074508-async_cancel_safe_functions.org  20241121074612-cancelation_points.org  20241121075144-start_routine.org  20241121080121-restrict_keyword.org  20241121080334-pthread_exit.org  20241121080523-pthread_cancel.org  20241121080544-exit.org  20241121080717-pthread_attr_t.org  20241121080807-pthread_att_init.org  20241121081237-pthread_sigmask.org  20241121081257-sigpending.org  20241121081348-sigaltstack.org  20241121081421-floating_point_environment.org  20250205075037-pthread_mutex.org
tests/integration_tests/: integration_test.py  scenario1.py
tests/scenarios/: test_scenario1.py
tests/sync_test/: main.c  sync_test
tests/unittests/: test_main.cpp  test_main.hpp
